style.css
/*
 Helpers
----------------------
*/

* {
  box-sizing:border-box;
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
}

body {
  font: 14px Helvetica Neue;
  text-rendering: optimizeLegibility;
/*  margin-top: 1em;*/
  margin: 0;
/*  background: #eee;*/
  background: #F0F1EB;
}


h1 {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  border-bottom: 1px solid #ccc;
  padding: 20px 0;
  margin: 0;
}

h2 {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  border-bottom: 1px solid #ccc;
  padding: 20px 0;
  margin: 0;
}

#properties div.color {
  float: left;
  width: 20px;
  height: 20px;
}

#properties .property.add div.color {
  background: #fff;
}

#properties .property span {
  padding-left: 10px;
}

#properties .property {
  padding: 4px 0;
}


#selected_properties a:nth-child(1) div.color { background: #8DB5C8; }
#selected_properties a:nth-child(2) div.color { background: #90963C; }
#selected_properties a:nth-child(3) div.color { background: #B16649; }
#selected_properties a:nth-child(4) div.color { background: #A2C355; }
#selected_properties a:nth-child(5) div.color { background: #93BAA1; }
#selected_properties a:nth-child(6) div.color { background: #808E89; }
#selected_properties a:nth-child(7) div.color { background: #86A2A9; }


a {
  color: steelblue;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}
 
.body {
  width: 960px;
  margin: auto;
}

/* body > #container > #sheet > #visualization
-------------------------------------------------------------------------------*/

#visualization {
  margin-left: 270px;
  padding-top: 80px;
}

#canvas {
  background: #fff;
  
  overflow: auto;
  min-height: 700px;
  margin-right: 20px;
}

svg {
  overflow: auto;
}

svg text {
  font-size: 10px;
}

svg text.item-label {
  font-size: 14px;
  font-style: italic;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
}

svg .bar text {
  font-size: 11px;
}


#settings {
  float: right;
  width: 180px;
}

/* body > #container > #sheet > #facets
-------------------------------------------------------------------------------*/


#trail {
  position: absolute;
  top: 0px;
  left: 270px;
  right: 200px;
}

#facets { 
  margin-top: 0px; margin-right: 10px; float: left; width: 260px; padding: 0 0 20px 0;
  padding: 10px;
}

#facets .no-filters {
  padding: 20px 0;
  padding-top: 9px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-weight: lighter;
  font-style: italic;
}

#facets a { border: none; }
#facets .list { overflow: auto; }

h3 {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-weight: lighter;
  font-style: italic;
  font-size: 16px;
  padding: 1px; padding-top: 9px; margin-bottom: 13px; margin-left: 0px; padding-left: 0px; font-weight: normal; margin-top: 1px; 
}

#facets .facet { }
#facets .facet ul { margin: 0px; padding: 0px; }
#facets .facet ul.facet-choices-available {max-height: 160px; overflow: auto;}

#facets .facet.selected ul { display: block; }
#facets .facet li { list-style: none; margin: 0; padding-left: 0px; padding-top: 5px; overflow: auto; color: #888; }

#facets .facet li a {
  position: relative;
  overflow: auto;
  display: block; 
  color: #888; 
  font-size: 13px; 
  white-space: nowrap;
  padding-left: 30px;
}

#facets .facet li a:hover { text-decoration: none; color: #000; }
#facets .facet li a:hover .tick-icon { border-color: #000; }
#facets .facet li a span.item-count { 
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-style: italic;
  font-weight: bold;
  color: #bbb; margin-left: 5px; padding: 0 5px; font-size: 18px; float: right; /* background: #777; */
}

#facets .facet li.selected a span.item-count, #facets .facet li:hover a span.item-count { color: black; }

#facets .facet li a div.tick-icon { 
  position: absolute;
  left: 0px;
  top: 2px;
  border: 1px solid #ccc;
  padding: 2px;
  width: 14px;
  height: 14px;
}

#facets .facet .facet-choices { overflow: auto; }
#facets .facet li.facet-choice { color: #888; }
#facets .facet li.facet-choice.selected a { color: black; }

#facets .facet li.facet-choice.selected a div.tick-icon {
  border-color: #000;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAGZJREFUeNpi/P//PwMpgImBRECyBgYinCQAxAFwtQQ0GADxe5BakCZ0DSCTEpAUJyApBtEGyBpAis9DJUEKG6BsuGJ0JxUgKfiPTTE2P8zHpxiXp+fjUowvlPqxKYZpYCQ1aQAEGACY7lEYFmjlwgAAAABJRU5ErkJggg==);
}

